[gd_scene load_steps=67 format=2]

[ext_resource path="res://Assets/Characters/Adventurer.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Utils/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Player/States/Run.gd" type="Script" id=4]
[ext_resource path="res://Player/States/Idle.gd" type="Script" id=5]
[ext_resource path="res://Player/States/Jump_wall.gd" type="Script" id=6]
[ext_resource path="res://Player/Animations/Hang.tres" type="Animation" id=7]
[ext_resource path="res://Player/Animations/Idle.tres" type="Animation" id=8]
[ext_resource path="res://Player/Animations/Run.tres" type="Animation" id=9]
[ext_resource path="res://Player/Animations/Jump_top.tres" type="Animation" id=10]
[ext_resource path="res://Player/Animations/Jump_simple.tres" type="Animation" id=11]
[ext_resource path="res://Player/Animations/Jump_fall.tres" type="Animation" id=12]
[ext_resource path="res://Player/Animations/Jump.tres" type="Animation" id=13]
[ext_resource path="res://Player/Animations/Climb.tres" type="Animation" id=14]
[ext_resource path="res://Player/Animations/Wall_slide.tres" type="Animation" id=15]
[ext_resource path="res://Player/States/Hang.gd" type="Script" id=16]
[ext_resource path="res://Player/States/Climb.gd" type="Script" id=17]
[ext_resource path="res://Player/Animations/Crouch.tres" type="Animation" id=18]
[ext_resource path="res://Player/Animations/Crouch_walk.tres" type="Animation" id=19]
[ext_resource path="res://Player/States/Crouch.gd" type="Script" id=20]
[ext_resource path="res://Player/States/Crouch_walk.gd" type="Script" id=21]
[ext_resource path="res://Player/Animations/Slide.tres" type="Animation" id=22]
[ext_resource path="res://Player/States/Slide.gd" type="Script" id=23]
[ext_resource path="res://Player/States/Wall_slide.gd" type="Script" id=24]
[ext_resource path="res://Player/States/Jump.gd" type="Script" id=25]
[ext_resource path="res://Player/Animations/Jump_wall.tres" type="Animation" id=26]
[ext_resource path="res://Player/States/Jump_top.gd" type="Script" id=27]
[ext_resource path="res://Player/States/Jump_fall.gd" type="Script" id=28]
[ext_resource path="res://Player/Animations/Stand_up.tres" type="Animation" id=29]
[ext_resource path="res://Player/States/Stand_up.gd" type="Script" id=30]
[ext_resource path="res://Player/Animations/Jump_double.tres" type="Animation" id=31]
[ext_resource path="res://Player/States/Jump_double.gd" type="Script" id=32]
[ext_resource path="res://Player/States/Knock_down.gd" type="Script" id=33]
[ext_resource path="res://Player/Animations/Knock_down_pt2.tres" type="Animation" id=34]
[ext_resource path="res://Player/Animations/Knock_down_pt1.tres" type="Animation" id=35]
[ext_resource path="res://Player/Animations/Knock_down_pt3.tres" type="Animation" id=36]
[ext_resource path="res://Player/Animations/Get_up_pt1.tres" type="Animation" id=37]
[ext_resource path="res://Player/States/Get_up.gd" type="Script" id=38]
[ext_resource path="res://Player/Animations/Get_up_pt2.tres" type="Animation" id=39]
[ext_resource path="res://Player/Animations/Run_sword.tres" type="Animation" id=40]
[ext_resource path="res://Player/Animations/Sheath.tres" type="Animation" id=41]
[ext_resource path="res://Player/Animations/Draw.tres" type="Animation" id=42]
[ext_resource path="res://Player/Animations/Item.tres" type="Animation" id=43]
[ext_resource path="res://Player/Animations/Idle_sword.tres" type="Animation" id=44]
[ext_resource path="res://Player/States/Item.gd" type="Script" id=45]
[ext_resource path="res://Player/States/Sheath.gd" type="Script" id=46]
[ext_resource path="res://Player/States/Draw.gd" type="Script" id=47]
[ext_resource path="res://Player/States/Attack.gd" type="Script" id=48]
[ext_resource path="res://Player/Animations/Attack3.tres" type="Animation" id=49]
[ext_resource path="res://Player/Animations/Attack2.tres" type="Animation" id=50]
[ext_resource path="res://Player/Animations/Attack1.tres" type="Animation" id=51]
[ext_resource path="res://Player/States/Attack_air.gd" type="Script" id=52]
[ext_resource path="res://Player/Animations/Attack3_air.tres" type="Animation" id=53]
[ext_resource path="res://Player/Animations/Attack1_air.tres" type="Animation" id=54]
[ext_resource path="res://Player/Animations/Attack3_air_end.tres" type="Animation" id=55]
[ext_resource path="res://Player/Animations/Attack3_air_loop.tres" type="Animation" id=56]
[ext_resource path="res://Player/Animations/Attack2_air.tres" type="Animation" id=57]
[ext_resource path="res://Player/States/Attack_air_slam.gd" type="Script" id=58]
[ext_resource path="res://Player/States/Damage.gd" type="Script" id=59]
[ext_resource path="res://Player/Animations/Damage.tres" type="Animation" id=60]
[ext_resource path="res://Player/States/Jump_group.gd" type="Script" id=61]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 0.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.5, 0.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 17 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Head" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 1 )

[node name="Legs" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="CornerGrab" type="CollisionShape2D" parent="."]
position = Vector2( 0, -27.5 )
shape = SubResource( 3 )
disabled = true

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
position = Vector2( -25, -36 )
texture = ExtResource( 1 )
centered = false
vframes = 20
hframes = 10
frame = 93

[node name="ItemParent" type="Position2D" parent="Body"]
position = Vector2( 9, -11 )

[node name="SolidCheck" type="Area2D" parent="Body"]
input_pickable = false
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/SolidCheck"]
visible = false
position = Vector2( 5.5, -27.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Body/SolidCheck"]
visible = false
position = Vector2( 0, -10 )
shape = SubResource( 5 )

[node name="Grnd1" type="RayCast2D" parent="Body"]
position = Vector2( -5, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3

[node name="Grnd2" type="RayCast2D" parent="Body"]
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3

[node name="Grnd3" type="RayCast2D" parent="Body"]
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3

[node name="HeadCheck1" type="RayCast2D" parent="Body"]
visible = false
position = Vector2( -5, -20 )
cast_to = Vector2( 0, -7 )

[node name="HeadCheck2" type="RayCast2D" parent="Body"]
visible = false
position = Vector2( 5, -20 )
cast_to = Vector2( 0, -7 )

[node name="WallCheck1" type="RayCast2D" parent="Body"]
visible = false
position = Vector2( 5, -28 )
cast_to = Vector2( 2, 0 )

[node name="WallCheck2" type="RayCast2D" parent="Body"]
visible = false
position = Vector2( 5, -16 )
cast_to = Vector2( 2, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack1 = ExtResource( 51 )
anims/Attack1_air = ExtResource( 54 )
anims/Attack2 = ExtResource( 50 )
anims/Attack2_air = ExtResource( 57 )
anims/Attack3 = ExtResource( 49 )
anims/Attack3_air = ExtResource( 53 )
anims/Attack3_air_end = ExtResource( 55 )
anims/Attack3_air_loop = ExtResource( 56 )
anims/Climb = ExtResource( 14 )
anims/Crouch = ExtResource( 18 )
anims/Crouch_walk = ExtResource( 19 )
anims/Damage = ExtResource( 60 )
anims/Draw = ExtResource( 42 )
anims/Get_up_pt1 = ExtResource( 37 )
anims/Get_up_pt2 = ExtResource( 39 )
anims/Hang = ExtResource( 7 )
anims/Idle = ExtResource( 8 )
anims/Idle_sword = ExtResource( 44 )
anims/Item = ExtResource( 43 )
anims/Jump = ExtResource( 13 )
anims/Jump_double = ExtResource( 31 )
anims/Jump_fall = ExtResource( 12 )
anims/Jump_simple = ExtResource( 11 )
anims/Jump_top = ExtResource( 10 )
anims/Jump_wall = ExtResource( 26 )
anims/Knock_down_pt1 = ExtResource( 35 )
anims/Knock_down_pt2 = ExtResource( 34 )
anims/Knock_down_pt3 = ExtResource( 36 )
anims/Run = ExtResource( 9 )
anims/Run_sword = ExtResource( 40 )
anims/Sheath = ExtResource( 41 )
anims/Slide = ExtResource( 22 )
anims/Stand_up = ExtResource( 29 )
anims/Wall_slide = ExtResource( 15 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SheathTimer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Jump_group" type="Node" parent="StateMachine"]
script = ExtResource( 61 )

[node name="Jump" type="Node" parent="StateMachine/Jump_group"]
script = ExtResource( 25 )

[node name="Jump_top" type="Node" parent="StateMachine/Jump_group"]
script = ExtResource( 27 )

[node name="Jump_fall" type="Node" parent="StateMachine/Jump_group"]
script = ExtResource( 28 )

[node name="Jump_double" type="Node" parent="StateMachine/Jump_group"]
script = ExtResource( 32 )

[node name="Jump_wall" type="Node" parent="StateMachine/Jump_group"]
script = ExtResource( 6 )

[node name="Hang" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Climb" type="Node" parent="StateMachine"]
script = ExtResource( 17 )
climb = Vector2( 6, -27 )

[node name="Crouch" type="Node" parent="StateMachine"]
script = ExtResource( 20 )

[node name="Crouch_walk" type="Node" parent="StateMachine"]
script = ExtResource( 21 )

[node name="Slide" type="Node" parent="StateMachine"]
script = ExtResource( 23 )

[node name="Wall_slide" type="Node" parent="StateMachine"]
script = ExtResource( 24 )

[node name="Stand_up" type="Node" parent="StateMachine"]
script = ExtResource( 30 )

[node name="Knock_down" type="Node" parent="StateMachine"]
script = ExtResource( 33 )

[node name="Get_up" type="Node" parent="StateMachine"]
script = ExtResource( 38 )

[node name="Item" type="Node" parent="StateMachine"]
script = ExtResource( 45 )

[node name="Sheath" type="Node" parent="StateMachine"]
script = ExtResource( 46 )

[node name="Draw" type="Node" parent="StateMachine"]
script = ExtResource( 47 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 48 )

[node name="Attack_air" type="Node" parent="StateMachine"]
script = ExtResource( 52 )

[node name="Attack_air_slam" type="Node" parent="StateMachine"]
script = ExtResource( 58 )

[node name="Damage" type="Node" parent="StateMachine"]
script = ExtResource( 59 )
[connection signal="body_entered" from="Body/SolidCheck" to="." method="_on_CornerSpaceCheck_body_entered"]
[connection signal="body_exited" from="Body/SolidCheck" to="." method="_on_CornerSpaceCheck_body_exited"]
